# epidemiological-forecasting

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  PROJECT_LOG.md  README.md  RUNBOOK.md  pyproject.toml
archive/: README.md
artifacts/: README.md
configs/: core.yaml  data.yaml  modeling_tracks.yaml  report.yaml  split.yaml
configs/models/: glm.yaml  gru.yaml  sarima.yaml
data/: README.md
dengue/: __init__.py
dengue-forecast/: .gitignore  DECISIONS.md  Makefile  README.md  TODO.md  environment.yml
dengue-forecast/configs/: features.yaml  split.yaml
dengue-forecast/dengue/: __init__.py
dengue-forecast/scripts/: ingest.py  stack_ensemble.py  train_baselines.py  train_dl.py
dengue/ensemble/: stacker.py
dengue/features/: ar_terms.py  calendar.py  climate_lags.py  encoder.py
dengue/forecasting/: __init__.py  current_forecast.py  hierarchy.py  modeling_tracks.py
dengue/ingest/: cases_reader.py  era5_fetcher.py  weather_reader.py
dengue/models/: gbm.py  glm_nb.py  sarima.py
dengue/preprocess/: aggregates.py  align_week.py  (+1 more)
docs/: article_notes.md  decisions.md  figure_interpretations.md  project_log.md  questions.md  runbook.md  todo.md
notebooks/: 01_problem_framing.ipynb
references/: README.md
scripts/: __init__.py  build_features.py  build_panel.py  diagnostics.py  evaluate.py  fit_seirs.py  forecast_2025.py  qc_panel.py  render_report.py  run_glm_alpha_sweep.sh  stack_ensemble.py  summarize_gbm.py  summarize_glm.py  summarize_models.py  train_dl.py  train_gbm.py  train_glm.py  train_sarima.py  train_seasonal_naive.py
(+167 files in other folders)
