[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dengue-forecast"
version = "0.0.1"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Enable isort-equivalent import sorting via Ruff
extend-select = ["I"]
# Ignore E402 since we keep docstrings above imports (intentional)
ignore = ["E402"]

[tool.ruff.format]
line-ending = "lf"
